--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -10,6 +10,7 @@
     <PackageProjectUrl>https://github.com/vbfox/stidgen</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/vbfox/stidgen/blob/master/LICENSE.md</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/vbfox/stidgen.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <PackageTags>tools;codegen</PackageTags>
     <Authors>Julien Roncaglia</Authors>
     <Owners>Julien Roncaglia</Owners>
