--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,7 +8,7 @@
   <PropertyGroup>
     <Description>Strongly Typed ID type Generator</Description>
     <PackageProjectUrl>https://github.com/vbfox/stidgen</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/vbfox/stidgen/blob/master/LICENSE.md</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/vbfox/stidgen.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>tools;codegen</PackageTags>
